gestionnaire in c 50% done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
     "java.project.sourcePaths": [
         "Testing"
-    ]
+    ],
+    "files.associations": {
+        "stdbool.h": "c",
+        "string.h": "c",
+        "pthread.h": "c",
+        "diffuseurlist.h": "c",
+        "stdio.h": "c",
+        "diffuseurchecker.h": "c"
+    }
 }
