--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
         "pthread.h": "c",
         "diffuseurlist.h": "c",
         "stdio.h": "c",
-        "diffuseurchecker.h": "c"
+        "diffuseurchecker.h": "c",
+        "stdlib.h": "c",
+        "select.h": "c"
     }
 }
